--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site Settings
-title: Jekflix | A theme for Jekyll
+title: Personal Blog of JS
 email: youremail@xyz.com
 description: Some text about your blog.
 baseurl: " " # the subpath of your site, e.g. /blog
@@ -7,7 +7,7 @@ url: "https://JiSeobKim.github.io" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
 
 # User Settings
-username: Personal Blog of JS
+username:
 user_description: Some text about you.
 disqus_username: disqus_username
 
