--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-baseurl: "/Type-on-Strap"
+baseurl: " "
 url: "https://jiseobkim.github.io"
 title: Personal Blog of KJS # site's title
 description: "A website with blog posts and pages" # used by search engines
