--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ theme_settings:
     email: true
 
   # Scripts / Features
-  google_analytics: # Tracking ID, e.g. "UA-000000-01"
+  google_analytics: UA-121626260-1
   disqus_shortname: https-jiseobkim-github-io
   katex: true # Enable if using math markup
 
