--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ theme_settings:
   gravatar: # Email MD5 hash
   # Header and footer text
   header_text: > #two or three lines to describe your site
-     <p> <h3>Developer Story</h3> <h3>Who love Swift</h3></p>
+     <p> <h3>Developer Story<br>Who love Swift</h3></p>
   header_text_feature_image: assets/img/pexels/desk-messy.jpeg
   footer_text: >
        <div style = "text-align:center">
