config에 블로그 소개글 수정

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: 😀😍😉 JS의 개발 블로그 😁😆😄
 description: 나만의 공간
 author: Jiseob Kim
 github: https://github.com/JiSeobKim
-about: iOS를 좋아하는 개발자에요, Swift 짱짱, Objc,,,,😅
+about: 매끄러운 iOS 만들자, 뿌셔
 disqus_shortname: https-jiseobkim-github-io
 google_analytics: UA-121626260-1
 avatar_url: /static/img/mainIcon2.png
