--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ paginate: 20
 per_page: 20
 paginate_path: "/page/:num/"
 markdown: kramdown
-gems:
+gems:
   - jekyll-paginate
   - jekyll-gist
 
